# endpoint-threat-detection-rust

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
sensor/: Cargo.toml
sensor/src/: logger.rs  main.rs  registry.rs  rules.rs
sensor/src/etw/: mod.rs  network.rs  process.rs
shared/: Cargo.toml
shared/src/: models.rs
src/: main.rs
src/config/: edr_rules.json  ioc.rs  mod.rs  rules.rs
src/events/: alert.rs  mod.rs  network.rs  process.rs
src/monitoring/: common.rs  correlation_engine.rs  etw.rs  mod.rs  network.rs  network_monitor.rs  process.rs  process_monitor.rs
src/utils/: common.rs  mod.rs  privilege.rs
