[workspace]
members = ["sensor", "cli", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0"
chrono = "0.4"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
    "Win32_System_Registry",
] }