[package]
name = "etw_edr"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.12"
ctrlc = "3.4"
uuid = { version = "1.8", features = ["v4"] }
whoami = "1.4"
regex = "1.10"
widestring = "1.0"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"