[package]
name = "edr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "edr-cli"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
lazy_static.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"