[package]
name = "sensor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sensor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
lazy_static.workspace = true
windows.workspace = true
winreg = "0.52"
anyhow = "1.0"